---
title: IOC Service — Core Domain Model
---
classDiagram
    class Indicator {
        +int id
        +str ioc_value
        +str type
        +int confidence
        +str tlp
        +str source
        +bool is_active
        +datetime first_seen
        +datetime last_seen
        +datetime expires_at
        +dict metadata_
    }

    class Feed {
        +int id
        +str source_id
        +str source_type
        +str display_name
        +str base_url
        +bool enabled
        +bool deleted
        +str schedule_cron
        +datetime created_at
    }

    class FeedRun {
        +int id
        +str run_id
        +str feed_source_id
        +str trigger_type
        +str status
        +int fetched_count
        +str error
        +datetime started_at
        +datetime finished_at
    }

    class SyncJob {
        +int id
        +str job_id
        +str feed_source_id
        +str trigger_type
        +str status
        +str failure_class
        +int retry_count
        +int max_retries
        +datetime next_attempt_at
        +datetime started_at
        +datetime finished_at
        +dict result_json
    }

    class ExportJob {
        +int id
        +str job_id
        +str fmt
        +str status
        +str result_path
        +str error
        +dict query_json
        +str access_token
        +datetime expires_at
        +datetime created_at
    }

    class AppSetting {
        +int id
        +str key
        +str value
        +bool is_secret
        +datetime updated_at
    }

    class AppLog {
        +int id
        +str level
        +str component
        +str message
        +str feed_source_id
        +str run_id
        +dict metadata_
        +datetime created_at
    }

    class AuditLog {
        +int id
        +str action
        +str entity_type
        +int entity_id
        +str user_id
        +dict metadata_
        +str prev_hash
        +str entry_hash
        +datetime created_at
    }

    class DeadLetterJob {
        +int id
        +str original_job_id
        +str feed_source_id
        +str failure_class
        +str error
        +str status
        +int retry_count
        +int requeue_count
        +str requeue_sync_job_id
        +datetime last_requeued_at
        +datetime created_at
    }

    Feed "1" --> "0..*" FeedRun : produces
    Feed "1" --> "0..*" SyncJob : drives
    SyncJob "1" --> "0..1" FeedRun : correlated via run_id
    SyncJob "1" --> "0..1" DeadLetterJob : failed to
    Feed "1" --> "0..*" Indicator : sources
